# polymarket-lp-collector2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: collect.yml
deploy/: container-entrypoint.sh  hf-dataset-card.md  koyeb.env.example  polymarket-backup.service  polymarket-backup.timer  polymarket-collector.service
polymarket_collector/: __init__.py  analytics_common.py  auxiliary_streams.py  backtest.py  book_checkpoints.py  config.py  discovery.py  etl.py  health.py  hf_backup.py  main.py  orderbook.py  state.py  storage.py  stream.py
scripts/: deploy_gcp.sh  deploy_hf.py  deploy_koyeb.sh  install_vps.sh  polymarket-backup  run_github_collector.sh
tests/: test_analytics.py  test_auxiliary_streams.py  test_book_checkpoints.py  test_config.py  test_discovery.py  test_health.py  test_hf_backup.py  test_storage.py  test_stream.py
